--- a/index.html
+++ b/index.html
@@ -177,21 +177,103 @@
   <section id="pizza">
     <h2>Tipos de Pizza</h2>
     <div class="cardapio">
-      <!-- Conteúdo de pizzas -->
+      <div class="cardapio">
+    <div class="item">
+      <img src="images/pizza1.jpg" alt="Pizza Margherita" />
+      <h3>Pizza Margherita</h3>
+      <p>Molho de tomate, queijo mozzarella e manjericão fresco.</p>
+      <div class="preco">200MT</div>
+      <button onclick="adicionar(200)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/pizza2.jpg" alt="Pizza Pepperoni" />
+      <h3>Pizza Pepperoni</h3>
+      <p>Queijo, molho de tomate e fatias de pepperoni.</p>
+      <div class="preco">250MT</div>
+      <button onclick="adicionar(250)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/pizza3.jpg" alt="Pizza Frango BBQ" />
+      <h3>Pizza Frango BBQ</h3>
+      <p>Frango grelhado, queijo e molho barbecue.</p>
+      <div class="preco">270MT</div>
+      <button onclick="adicionar(270)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/pizza4.jpg" alt="Pizza Vegetariana" />
+      <h3>Pizza Vegetariana</h3>
+      <p>Cheia de vegetais frescos e queijo derretido.</p>
+      <div class="preco">230MT</div>
+      <button onclick="adicionar(230)">Adicionar</button>
+    </div><!-- Conteúdo de pizzas -->
     </div>
   </section>
 
   <section id="burritos">
     <h2>Tipos de Burritos</h2>
     <div class="cardapio">
-      <!-- Conteúdo de burritos -->
+      <div class="item">
+      <img src="images/burrito1.jpg" alt="Burrito Clássico" />
+      <h3>Burrito Clássico</h3>
+      <p>Carne, feijão, arroz, queijo e molho.</p>
+      <div class="preco">150MT</div>
+      <button onclick="adicionar(150)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/burrito2.jpg" alt="Burrito de Frango" />
+      <h3>Burrito de Frango</h3>
+      <p>Frango grelhado com vegetais e molho especial.</p>
+      <div class="preco">160MT</div>
+      <button onclick="adicionar(160)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/burrito3.jpg" alt="Burrito Veggie" />
+      <h3>Burrito Veggie</h3>
+      <p>Feijão preto, arroz, legumes e guacamole.</p>
+      <div class="preco">140MT</div>
+      <button onclick="adicionar(140)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/burrito4.jpg" alt="Burrito Picante" />
+      <h3>Burrito Picante</h3>
+      <p>Carne picante com jalapeños e queijo cheddar.</p>
+      <div class="preco">170MT</div>
+      <button onclick="adicionar(170)">Adicionar</button>
+    </div><!-- Conteúdo de burritos -->
     </div>
   </section>
 
   <section id="frango">
     <h2>Pratos de Frango</h2>
     <div class="cardapio">
-      <!-- Conteúdo de frango -->
+       <div class="item">
+      <img src="images/frango1.jpg" alt="Frango Grelhado" />
+      <h3>Frango Grelhado</h3>
+      <p>Servido com batata frita ou arroz.</p>
+      <div class="preco">180MT</div>
+      <button onclick="adicionar(180)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/frango2.jpg" alt="Frango Picante" />
+      <h3>Frango Picante</h3>
+      <p>Frango com molho piri-piri da casa.</p>
+      <div class="preco">190MT</div>
+      <button onclick="adicionar(190)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/frango3.jpg" alt="Frango Panado" />
+      <h3>Frango Panado</h3>
+      <p>Empanado crocante por fora, macio por dentro.</p>
+      <div class="preco">200MT</div>
+      <button onclick="adicionar(200)">Adicionar</button>
+    </div>
+    <div class="item">
+      <img src="images/frango4.jpg" alt="Frango ao Curry" />
+      <h3>Frango ao Curry</h3>
+      <p>Molho de curry cremoso e arroz branco.</p>
+      <div class="preco">210MT</div>
+      <button onclick="adicionar(210)">Adicionar</button>
+    </div><!-- Conteúdo de frango -->
     </div>
   </section>
 
