--- a/index.html
+++ b/index.html
@@ -170,7 +170,18 @@
   <section id="bebidas">
     <h2>Bebidas</h2>
     <div class="cardapio">
-      <!-- Conteúdo de bebidas -->
+      < <div class="item">
+        <img src="images/refrigerante.jpg" alt="Refrigerante" />
+        <h3>Refrigerante</h3>
+        <p>Gelado, perfeito para sua refeição.</p>
+        <button onclick="adicionar(150)">Adicionar - 150MT</button>
+      </div>
+      <div class="item">
+        <img src="images/suco.jpg" alt="Suco Natural" />
+        <h3>Suco de Laranja</h3>
+        <p>Natural e refrescante.</p>
+        <button onclick="adicionar(180)">Adicionar - 180MT</button>
+      </div>!-- Conteúdo de bebidas -->
     </div>
   </section>
 
