--- a/index.html
+++ b/index.html
@@ -164,6 +164,27 @@
         <div class="preco">80MT</div>
         <button onclick="adicionar(80)">Adicionar</button>
       </div>
+    <div class="item">
+        <img src="images/tosta2.jpg" alt="Tosta de Frango" />
+        <h3>Tosta de Frango</h3>
+        <p>Tosta recheada com frango desfiado, queijo e tomate.</p>
+        <div class="preco">90MT</div>
+        <button onclick="adicionar(90)">Adicionar</button>
+      </div>
+      <div class="item">
+        <img src="images/tosta3.jpg" alt="Tosta de Atum" />
+        <h3>Tosta de Atum</h3>
+        <p>Atum, cebola, azeitonas e queijo derretido no pão tostado.</p>
+        <div class="preco">85MT</div>
+        <button onclick="adicionar(85)">Adicionar</button>
+      </div>
+      <div class="item">
+        <img src="images/tosta4.jpg" alt="Tosta Vegetariana" />
+        <h3>Tosta Vegetariana</h3>
+        <p>Com abobrinha grelhada, tomate e queijo.</p>
+        <div class="preco">80MT</div>
+        <button onclick="adicionar(80)">Adicionar</button>
+      </div>
     </div>
   </section>
 
